	output to a terminal.

    o	windows() gains a new argument 'clickToConfirm', default TRUE,
	which controls if new-frame confirmation is done via clicking
	(or ENTER) on the window (the recent default) or via a
	question in the console (the default for other interactive
	devices).  The non-default behaviour may be useful when R is
	driven indirectly (e.g. via ESS) and for some Rterm users.




	**************************************************
	*						 *
	*	       2.7 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 2.7.1 patched


BUG FIXES

    o	Saving a graph in TIFF format could crash R (PR#11804).
    
    o	Rterm in interactive use did not implement R_FlushConsole() fully.

    o	getGraphicsEvent did not return onMouseMove events while a
	mouse button was depressed.

    o	The confirmation of a new frame for a windows() graphics
	device works harder to give the device focus, including
	bringing it to the top.
 


		CHANGES IN R VERSION 2.7.1


NEW FEATURES

    o	Rgui now accepts Unicode characters invalid in the locale when
	pasted in and converts them to \uxxxx sequences before passing
	to R.

    o	The Save as | Postscript ... file selection box now offers
	*.eps (default) and *.ps file selections.

    o	nchar() now gives the number of characters and their width as
	would be printed in Rgui for non-representable UTF-8 strings,
	not as they would be printed in Rterm (via <U+xxxx> escapes).

    o	savePlot() now adds the file type as an extension to the
	filename if no dot ('.') is present in the filename.  This
	provides the same default as in versions prior to 2.7.0, but
	allows the extension to be specified explicitly. (Contributed
	by Steve Ellison.)


BUG FIXES

    o	Sys.getenv() could read incorrectly non-ASCII values.

    o	The vertical scrollbar on the data editor/viewer now works
	when scrolling beyond 65535 rows.  (PR#11291)

    o	getWinProgressBar() returned an integer result -- it now